--- a/index.html
+++ b/index.html
@@ -1,131 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Side Scroll Game</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WEB CPANEL DIK_MARKER</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #000; overflow: hidden; }
-    canvas {
-      display: block;
-      margin: 0 auto;
-      background: linear-gradient(to bottom, #111, #333);
-      border: 2px solid #fff;
-    }
-
-    #gameOver {
-      color: red;
-      font-size: 3em;
-      font-family: sans-serif;
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      top: 40%;
-      display: none;
-    }
-
-    #controls {
+    body {
+      background-color: #0f172a;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
-      text-align: center;
-      font-family: sans-serif;
-      margin-top: 10px;
+      margin: 0;
+      padding: 0;
+    }
+    .glass {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(16px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+    #bgVideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -10;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-<canvas id="game" width="800" height="400"></canvas>
-<div id="gameOver">GAME OVER</div>
-<div id="controls">Gunakan Tombol ← → untuk gerak, ↑ untuk lompat</div>
+  <video autoplay muted loop id="bgVideo">
+    <source src="https://files.catbox.moe/483g59.mp4" type="video/mp4" />
+    Browser kamu tidak mendukung video.
+  </video>
 
-<script>
-  const canvas = document.getElementById("game");
-  const ctx = canvas.getContext("2d");
+  <div id="root"></div>
 
-  let player = {
-    x: 50,
-    y: 300,
-    w: 40,
-    h: 40,
-    color: "white",
-    dy: 0,
-    jumping: false
-  };
+  <script type="text/babel">
+    const { useState, useEffect } = React;
 
-  let enemy = {
-    x: 800,
-    y: 300,
-    w: 40,
-    h: 40,
-    color: "red",
-    speed: 4
-  };
+    function CreatePteroPanel() {
+      const [isLoggedIn, setIsLoggedIn] = useState(false);
+      const [password, setPassword] = useState("");
+      const [nameServer, setNameServer] = useState("");
+      const [cpu, setCpu] = useState("1");
+      const [disk, setDisk] = useState("1");
+      const [result, setResult] = useState(null);
+      const [createdCount, setCreatedCount] = useState(0);
+      const [apiStatus, setApiStatus] = useState(false);
+      const [runtime, setRuntime] = useState(0);
+      const [infoOpen, setInfoOpen] = useState(false);
+      const [batteryStatus, setBatteryStatus] = useState("Checking...");
+      const [isCharging, setIsCharging] = useState(null);
 
-  let keys = {};
-  document.addEventListener("keydown", e => keys[e.key] = true);
-  document.addEventListener("keyup", e => keys[e.key] = false);
+      const [adminUsername, setAdminUsername] = useState("");
+      const [adminEmail, setAdminEmail] = useState("");
+      const [adminPassword, setAdminPassword] = useState("");
 
-  function drawRect(obj) {
-    ctx.fillStyle = obj.color;
-    ctx.fillRect(obj.x, obj.y, obj.w, obj.h);
-  }
+      const apikey = "ptla_ZZX1qJHKKxmwWY8xFJangAj1gJUvB4JtXu0dtefK2O5"; 
+      const capikey = "ptlc_ctrCbRabRTBREAnCdc08B2iHOKNrYGRt6qP8WjveInd";
+      const domain = "https://server.private.dik.marker.cloudnestpanel.my.id";
 
-  function update() {
-    // Gravity
-    if (player.y < 300) {
-      player.dy += 1.2;
-      player.jumping = true;
-    } else {
-      player.dy = 0;
-      player.jumping = false;
-      player.y = 300;
+      useEffect(() => {
+        const start = Date.now();
+        const interval = setInterval(() => {
+          setRuntime(Math.floor((Date.now() - start) / 1000));
+          setApiStatus(apikey !== "" && capikey !== "");
+        }, 1000);
+
+        if (navigator.getBattery) {
+          navigator.getBattery().then(battery => {
+            const updateBatteryInfo = () => {
+              setBatteryStatus(`${Math.round(battery.level * 100)}%`);
+              setIsCharging(battery.charging);
+            };
+            updateBatteryInfo();
+            battery.addEventListener('levelchange', updateBatteryInfo);
+            battery.addEventListener('chargingchange', updateBatteryInfo);
+          });
+        } else {
+          setBatteryStatus("Not Supported");
+          setIsCharging(null);
+        }
+
+        return () => clearInterval(interval);
+      }, []);
+
+      const handleCreate = async () => {
+        if (!nameServer) return alert("Name server wajib diisi");
+        try {
+          const url = `https://pterodactyl-ten.vercel.app/create/pterov2?domain=${domain}&apikeyptero=${apikey}&capikeyptero=${capikey}&nameserver=${nameServer}&disk=${disk}&cpu=${cpu}`;
+          const res = await fetch(url);
+          const data = await res.json();
+          if (data?.creator) data.creator = "DIK_MARKER";
+          if (data.status === true || data.success === true) {
+            setCreatedCount(prev => prev + 1);
+          }
+          setResult(data);
+        } catch {
+          setResult({ status: false, message: "Error saat membuat panel" });
+        }
+      };
+
+      const handleCreateAdmin = async () => {
+        if (!adminUsername || !adminEmail || !adminPassword) {
+          return alert("Lengkapi semua input untuk admin panel!");
+        }
+        try {
+          const url = `https://pterodactyl-ten.vercel.app/create/adminpanel?domain=${domain}&apikey=${apikey}&username=${adminUsername}&email=${adminEmail}&password=${adminPassword}`;
+          const res = await fetch(url);
+          const data = await res.json();
+          if (data?.creator) data.creator = "DIK_MARKER";
+          setResult(data);
+        } catch {
+          setResult({ status: false, message: "Gagal membuat Admin Panel" });
+        }
+      };
+
+      if (!isLoggedIn) {
+        return (
+          <div className="min-h-screen flex items-center justify-center">
+            <div className="glass p-8 rounded-2xl w-full max-w-sm shadow-2xl animate__animated animate__fadeInDown">
+              <div className="flex flex-col items-center">
+                <img src="https://files.catbox.moe/5i0rjm.jpg" alt="Avatar" className="w-20 h-20 rounded-full mb-4 border-2 border-white shadow-md" />
+                <h2 className="text-3xl font-bold text-center mb-6 text-white animate__animated animate__fadeIn">Welcome Back</h2>
+              </div>
+              <div className="mb-4">
+                <label className="block text-sm text-gray-300 mb-1">Password</label>
+                <input
+                  type="password"
+                  placeholder="Masukkan password"
+                  value={password}
+                  onChange={(e) => setPassword(e.target.value)}
+                  className="w-full p-3 rounded-xl bg-gray-800 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-400 focus:outline-none"
+                />
+              </div>
+              <button
+                onClick={() => {
+                  if (password === "123") setIsLoggedIn(true);
+                  else alert("Password salah!");
+                }}
+                className="w-full bg-indigo-600 hover:bg-indigo-700 transition duration-200 text-white font-semibold py-3 mt-2 rounded-xl shadow-md"
+              >
+                Masuk Panel
+              </button>
+              <p className="text-xs text-center text-gray-400 mt-4">© {new Date().getFullYear()} WEB PANEL DIK_MARKER</p>
+            </div>
+          </div>
+        );
+      }
+
+      return (
+        <div className="flex flex-col md:flex-row min-h-screen animate__animated animate__fadeIn">
+          <div className="w-full md:w-64 bg-gray-900 bg-opacity-80 p-6 flex flex-col items-center space-y-4 relative">
+            <img src="https://files.catbox.moe/5i0rjm.jpg" className="rounded-full border-2 border-white w-24 h-24" alt="profile" />
+            <h1 className="font-bold text-xl text-center">WEB-PANEL-DIK-MARKER</h1>
+            <button className="absolute top-4 left-4 text-2xl" onClick={() => setInfoOpen(!infoOpen)}>⋮</button>
+          </div>
+
+          <div className="flex-1 p-6 flex flex-col items-center">
+            <div className="w-full max-w-md bg-gray-900 bg-opacity-80 p-6 rounded-2xl">
+              <h2 className="text-2xl font-semibold mb-6 text-center">Pterodactyl Server</h2>
+              <input value={nameServer} onChange={e => setNameServer(e.target.value)} placeholder="Name Server" className="w-full mb-4 p-3 rounded bg-gray-800 text-white placeholder-gray-400 text-center" />
+              <div className="flex gap-4 mb-4 justify-center">
+                <select className="w-1/2 p-3 bg-gray-800 text-white rounded text-center" value={cpu} onChange={e => setCpu(e.target.value)}>
+                  {[...Array(11).keys()].map(i => <option key={i} value={i}>{i === 0 ? 'Unlimited' : `${i} CPU`}</option>)}
+                </select>
+                <select className="w-1/2 p-3 bg-gray-800 text-white rounded text-center" value={disk} onChange={e => setDisk(e.target.value)}>
+                  {[...Array(11).keys()].map(i => <option key={i} value={i}>{i === 0 ? 'Unlimited' : `${i} GB`}</option>)}
+                </select>
+              </div>
+              <div className="text-center">
+                <button onClick={handleCreate} className="bg-blue-600 hover:bg-blue-700 transition px-6 py-2 rounded text-white font-bold">Enter Create Panel</button>
+              </div>
+
+              <h2 className="text-xl font-semibold mt-8 mb-4 text-center text-white">Create Admin Panel</h2>
+              <input placeholder="Username" onChange={(e) => setAdminUsername(e.target.value)} className="w-full mb-3 p-3 rounded bg-gray-800 text-white placeholder-gray-400 text-center" />
+              <input placeholder="Email" onChange={(e) => setAdminEmail(e.target.value)} className="w-full mb-3 p-3 rounded bg-gray-800 text-white placeholder-gray-400 text-center" />
+              <input type="password" placeholder="Password" onChange={(e) => setAdminPassword(e.target.value)} className="w-full mb-4 p-3 rounded bg-gray-800 text-white placeholder-gray-400 text-center" />
+              <div className="text-center">
+                <button onClick={handleCreateAdmin} className="bg-red-600 hover:bg-red-700 transition px-6 py-2 rounded text-white font-bold">Create Admin Panel</button>
+              </div>
+
+              <div className="text-xs text-red-400 text-center mt-4 font-semibold animate__animated animate__pulse animate__infinite">
+                NOTE: DILARANG CREAT UNLI BANYAK BANYAK AGAR SERVER TIDAK MOKAD!!!!
+              </div>
+            </div>
+          </div>
+
+          {result && (
+            <div className="fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm flex items-center justify-center z-50 px-4">
+              <div className="glass w-full max-w-md p-4 rounded-2xl shadow-2xl animate__animated animate__fadeInUp">
+                <h3 className="font-bold text-lg text-blue-300 mb-2">Hasil Create</h3>
+                <pre className="bg-black bg-opacity-30 text-green-200 text-xs p-3 rounded max-h-60 overflow-auto whitespace-pre-wrap">
+{JSON.stringify(result, null, 2)}
+                </pre>
+                <div className="flex justify-between items-center mt-4">
+                  <button
+                    onClick={async () => {
+                      try {
+                        await navigator.clipboard.writeText(JSON.stringify(result, null, 2));
+                        alert("✅ Data berhasil disalin!");
+                      } catch {
+                        alert("❌ Gagal menyalin!");
+                      }
+                    }}
+                    className="text-blue-400 text-sm hover:underline flex items-center gap-1"
+                  >📋 Copy Data</button>
+
+                  <button onClick={() => setResult(null)} className="text-red-400 text-sm hover:underline flex items-center gap-1">
+                    ❌ Tutup Hasil
+                  </button>
+                </div>
+              </div>
+            </div>
+          )}
+
+          {infoOpen && (
+            <div className="fixed top-20 left-6 bg-gray-800 bg-opacity-90 text-white p-6 rounded-lg shadow-xl text-sm space-y-2 w-72 z-50">
+              <p><strong>Status API:</strong> {apiStatus ? "✅ True" : "❌ False"}</p>
+              <p><strong>Created Panel:</strong> {createdCount}</p>
+              <p><strong>Baterai:</strong> {batteryStatus} {isCharging !== null && (isCharging ? "⚡ Charging" : "🔋")}</p>
+              {batteryStatus !== "Not Supported" && (
+                <div className="w-full h-3 bg-gray-700 rounded-full mt-1">
+                  <div className={`h-3 rounded-full transition-all duration-500 ${
+                    parseInt(batteryStatus) < 20
+                      ? "bg-red-500"
+                      : parseInt(batteryStatus) < 50
+                      ? "bg-yellow-400"
+                      : "bg-green-500"
+                  }`} style={{ width: batteryStatus.replace("%", "") + "%" }} />
+                </div>
+              )}
+              <p><strong>Runtime:</strong> {runtime}s</p>
+              <button className="text-red-400 text-xs hover:underline mt-2" onClick={() => setInfoOpen(false)}>❌ Tutup</button>
+            </div>
+          )}
+        </div>
+      );
     }
 
-    // Controls
-    if (keys["ArrowRight"]) player.x += 5;
-    if (keys["ArrowLeft"]) player.x -= 5;
-    if (keys["ArrowUp"] && !player.jumping) {
-      player.dy = -18;
-      player.jumping = true;
-    }
-
-    player.y += player.dy;
-
-    // Batas layar
-    if (player.x < 0) player.x = 0;
-    if (player.x + player.w > canvas.width) player.x = canvas.width - player.w;
-
-    // Enemy movement
-    enemy.x -= enemy.speed;
-    if (enemy.x + enemy.w < 0) {
-      enemy.x = 800 + Math.random() * 100;
-    }
-
-    // Collision
-    if (
-      player.x < enemy.x + enemy.w &&
-      player.x + player.w > enemy.x &&
-      player.y < enemy.y + enemy.h &&
-      player.y + player.h > enemy.y
-    ) {
-      document.getElementById("gameOver").style.display = "block";
-      cancelAnimationFrame(anim);
-      return;
-    }
-  }
-
-  function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    drawRect(player);
-    drawRect(enemy);
-  }
-
-  function gameLoop() {
-    update();
-    draw();
-    anim = requestAnimationFrame(gameLoop);
-  }
-
-  let anim = requestAnimationFrame(gameLoop);
-</script>
+    ReactDOM.createRoot(document.getElementById("root")).render(<CreatePteroPanel />);
+  </script>
 </body>
 </html>
